# tg-invite-checker

./: .gitignore  README.md  pyproject.toml
tg_invite_checker/: checker-script.py
