[tool.poetry]
name = "tg-invite-checker"
version = "0.1.0"
description = ""
authors = ["Erin Bristow"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
regex = "^2024.9.11"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checker = "tg_invite_checker.checker-script:main"
